Project/backend/manifests/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-db-ss
  namespace: project
spec:
  serviceName: project-db
  replicas: 1
  selector:
    matchLabels:
      app: project-db
  template:
    metadata:
      labels:
        app: project-db
    spec:
      volumes:
        - name: project-db-volume
          persistentVolumeClaim:
            claimName: project-db-claim
      containers:
        - name: postgres
          image: postgres:13.0
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: project-db-volume
              mountPath: /var/lib/postgresql/data
              subPath: postgres
