Project/backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      containers:
        - name: project
          image: thefenix/dok-project-backend:1.0
