Project/backend/manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-db-svc
  namespace: project
  labels:
    app: project-db
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: project-db
