Project/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
